--- a/relatorio.org
+++ b/relatorio.org
@@ -58,7 +58,7 @@
 
    *Passo 1.* T_0 | T_1 | T_2 | T_3 \leftarrow X_0 | X_1 | X_2 | X_3
 
-   *Passo 2.* For i = 0 to r - 1 do the following:
+   *Passo 2.* Para i = 0 até $r-1$ faça:
 
    *Passo 2.1.* T_1 \leftarrow T_1 \oplus F0(RK_{2i},T_0),
                 T_3 \leftarrow T_3 \oplus F1(RK_{2i + 1}, T_2)
@@ -70,21 +70,82 @@
    *GFN_{8,r}(RK_{0}, ..., RK_{4r-1}, X_0, X_1, ..., X_7)*
 
    *Entrada* : 32-bit round keys RK_{0}, ..., RK_{4r-1},
-                 32-bit data X_0, X_1, X_2, X_3, X_4, X_5, X_6, X_7,
+               32-bit data X_0, X_1, X_2, X_3, X_4, X_5, X_6, X_7,
 
    *Saída*: 32-bit data Y_0, Y_1, Y_2, Y_3, Y_4, Y_5, Y_6, Y_7
 
    *Passo 1.* T_0 | T_1 | ... | T_7 \leftarrow X_0 | X_1 | ... | X_7
 
-   *Passo 2.* For i = 0 to r - 1 do the following:
+   *Passo 2.* Para i = 0 até $r-1$ faça:
 
    *Passo 2.1.* T_1 \leftarrow T_1 \oplus F0(RK_{4i}, T_0),
-                   T_3 \leftarrow T_3 \oplus F1(RK_{4i + 1}, T_2),
-                   T_5 \leftarrow T_5 \oplus F0(RK_{4i + 2}, T_4),
-                   T_7 \leftarrow T_7 \oplus F1(RK_{4i + 3}, T_6)
+                T_3 \leftarrow T_3 \oplus F1(RK_{4i + 1}, T_2),
+                T_5 \leftarrow T_5 \oplus F0(RK_{4i + 2}, T_4),
+                T_7 \leftarrow T_7 \oplus F1(RK_{4i + 3}, T_6)
 
    *Passo 2.2.* T_0 | T_1 | ... | T_6 | T_7 \leftarrow T_1 | T_2 | ... | T_7 | T_0
 
    *Passo 3.* Y_0 | Y_1 | ... | Y_6 | Y_7 \leftarrow T_7 | T_0 | ... | T_5 | T_6
 
       
+* Resultados experimentais
+  Com o  intuito de compararar o  algoritmo Clefia com  o AES, fizemos
+  vários testes  de cifragem e decifragem. Os  tempos obtidos aparecem
+  nas tabelas abaixo. 
+  
+  É óbvio  que a  implementação do AES  da biblioteca OpenSSL  é muito
+  rápida,  já que o  código aberto  vem sendo  testado e  otimizado há
+  bastante tempo. 
+  
+  Nosso código, por outro lado,  foi escrito por duas pessoas apenas e
+  sem  o tempo  necessário para  fazer otimizações  mais  profundas no
+  código.  
+  
+  Apesar disso, a primeira implementação  era $10\%$ mais lenta. O que
+  fizemos para acelerar um pouco a execução foram
+  pequenas otimizações de código, como /loop unrolling/ de alguns
+  laços e trocar funções por  macros, que são substituídas em tempo de
+  compilação.  Acreditamos que com mais tempo e mais otimizações
+  poderíamos deminuir drasticamente os tempos apresentados.
+  
+  Nas tabelas a seguir, temos os tempos de execução de cada um dos dez
+  testes feitos.  O arquivo cifrado  é uma imagem de  uma distribuição
+  Linux, de 200278016 bytes.
+
+|---------------+-------------+----------------|
+| Cifrar        | AES-128 (s) | Clefia-128 (s) |
+|---------------+-------------+----------------|
+| Teste 1       |       1.996 |         31.778 |
+| Teste 2       |       1.933 |         31.783 |
+| Teste 3       |       2.030 |         31.773 |
+| Teste 4       |       1.933 |         31.782 |
+| Teste 5       |       2.026 |         31.782 |
+| Teste 6       |       2.059 |         31.786 |
+| Teste 7       |       2.078 |         31.791 |
+| Teste 8       |       2.124 |         31.785 |
+| Teste 9       |       1.948 |         31.904 |
+| Teste 10      |       1.981 |         31.775 |
+|---------------+-------------+----------------|
+| Média         |      2.0108 |        31.7939 |
+| Desvio Padrão |      0.0644 |         0.0390 |
+|---------------+-------------+----------------|
+
+|---------------+-------------+----------------|
+| Decifrar      | AES-128 (s) | Clefia-128 (s) |
+|---------------+-------------+----------------|
+| Teste 1       |       2.081 |         33.233 |
+| Teste 2       |       2.025 |         33.256 |
+| Teste 3       |       2.059 |         33.261 |
+| Teste 4       |       2.065 |         33.236 |
+| Teste 5       |       2.051 |         33.268 |
+| Teste 6       |       2.021 |         33.499 |
+| Teste 7       |       2.044 |          33.13 |
+| Teste 8       |       2.029 |         33.034 |
+| Teste 9       |       2.034 |         33.335 |
+| Teste 10      |       2.049 |         33.243 |
+|---------------+-------------+----------------|
+| Média         |      2.0458 |        33.2495 |
+| Desvio Padrão |      0.0191 |         0.1207 |
+|---------------+-------------+----------------|
+
+  
