--- a/relatorio.org
+++ b/relatorio.org
@@ -1,3 +1,17 @@
+#+TITLE:     Relatório Trabalho de Introdução a Criptografia
+#+AUTHOR:    Miguel Gaiowski e Douglas Santos
+#+EMAIL:     bla
+#+DATE:      2012-06-27 Wed
+#+DESCRIPTION: 
+#+KEYWORDS: 
+#+LANGUAGE:  en
+#+OPTIONS:   H:3 num:t toc:t \n:nil @:t ::t |:t ^:t -:t f:t *:t <:t
+#+OPTIONS:   TeX:t LaTeX:nil skip:nil d:nil todo:t pri:nil tags:not-in-toc
+#+INFOJS_OPT: view:nil toc:nil ltoc:t mouse:underline buttons:0 path:http://orgmode.org/org-info.js
+#+EXPORT_SELECT_TAGS: export
+#+EXPORT_EXCLUDE_TAGS: noexport
+#+LINK_UP:   
+#+LINK_HOME: 
 
 * Introdução
 
@@ -91,23 +105,23 @@
    Temos também a necessidade de gerar a inversa da GFN_{4, r} para
    que seja usada na função de decriptar. Abaixo, ela é apresentada
 
-     GFNINV_{4,r}(RK_{0}, ..., RK_{2r-1}, X0, X1, X2, X3)
+     GFNINV_{4,r}(RK_{0}, ..., RK_{2r-1}, X_0, X_1, X_2, X_3)
 
          input : 32-bit round keys RK_{0}, ..., RK_{2r-1},
-                 32-bit data X0, X1, X2, X3,
+                 32-bit data X_0, X_1, X_2, X_3,
 
-         output: 32-bit data Y0, Y1, Y2, Y3
+         output: 32-bit data Y_0, Y_1, Y_2, Y_3
 
-      Step 1. T0 | T1 | T2 | T3 <- X0 | X1 | X2 | X3
+      *Passo 1.* T_0 | T_1 | T_2 | T_3 <- X_0 | X_1 | X_2 | X_3
 
-      Step 2. For i = 0 to r - 1 do the following:
+      *Passo 2.* Para i = 0 até $r-1$ faça: 
 
-         Step 2.1. T1 <- T1 XOR F0(RK_{2(r - i) - 2}, T0),
-                   T3 <- T3 XOR F1(RK_{2(r - i) - 1}, T2)
+         *Passo 2.1.* T_1 <- T_1 \oplus F0(RK_{2(r - i) - 2}, T_0),
+                   T_3 <- T_3 \oplus F1(RK_{2(r - i) - 1}, T_2)
 
-         Step 2.2. T0 | T1 | T2 | T3 <- T3 | T0 | T1 | T2
+         *Passo 2.2.* T_0 | T_1 | T_2 | T_3 <- T_3 | T_0 | T_1 | T_2
 
-      Step 3. Y0 | Y1 | Y2 | Y3 <- T1 | T2 | T3 | T0
+      *Passo 3.* Y_0 | Y_1 | Y_2 | Y_3 <- T_1 | T_2 | T_3 | T_0
 
 
    
